...
    <!--    In content_save_route.xml-->
    <string name="title">Title: (this is REQUIRED) </string>
    <string name="name_route_hint">Name Route</string>
    <string name="starting_location">Starting Location:</string>
    <string name="location_det_hint">Location Details</string>
    <string name="loop">Loop</string>
    <string name="out_and_back">Out-and-back</string>
    <string name="flat_button">Flat</string>
    <string name="hilly_button">Hilly</string>
    <string name="even">Even</string>
    <string name="uneven">Uneven</string>
    <string name="street">Street</string>
    <string name="trail">Trail</string>
    <string name="hard">Hard</string>
    <string name="moderate">Moderate</string>
    <string name="easy">Easy</string>
    <string name="notes">Notes</string>
    <string name="notesHint">Extra information about the route</string>
    <string name="save">SAVE</string>

    <!--    In activity_routes.xml-->
    <string name="btn_see_teammates_routes">See Teammate Routes</string>
    <string name="menu_item_create_walk">Create Route</string>

    <!--    In item_route.xml-->
...
    <string name="btn_accept_team_invitation">Accept</string>
    <string name="btn_decline_team_invitation">Decline</string>
    <string name="text_invitation_not_exist">You don\'t have any pending invitations.</string>


    <!--    In both activity_loginxml and activity_mock.xml-->
    <string name="finish_btn_text">Finish</string>

    <!--    In both activity_home.xml and activity_route_details.xml-->
    <string name="total_steps_prompt">Total Steps: </string>
    <string name="total_distance">Total Distance: </string>
    <string name="time_elapsed">Time Elapsed: </string>
    <string name="start_walk">Start Walk</string>
...
    <string name="app_name">WalkWalkRevolution</string>
    <string name="title_activity_saving_page">Save your walk</string>
    <string name="title_activity_routes">My Routes</string>
    <string name="title_activity_invite_team_to_walk">Invite Team to Walk</string>

    <!--    Others-->
    <string name="routes">Routes</string>
    <string name="home">Home</string>
    <string name="team">Team</string>

    <!-- In ListviewAdapter.java -->
    <string name="fake_teammate_name">Samuel Jackson</string>
    <string name="fake_teammate_initials">SJ</string>
...
