...
        android:layout_marginStart="@dimen/details_indent"
        android:layout_marginTop="@dimen/details_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_starting_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unspecified"
        android:textSize="@dimen/details_size"
        android:layout_marginTop="@dimen/details_indent"
        android:layout_marginStart="@dimen/subdetails_indent"
...
        android:layout_marginStart="@dimen/subdetails_indent"
        android:layout_marginTop="@dimen/details_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_route_env_prompt"/>

    <TextView
        android:id="@+id/tv_rte_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/unspecified"
        android:textSize="@dimen/details_size"
        android:layout_marginStart="@dimen/details_indent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_rte_type_prompt"
...
        android:layout_marginStart="@dimen/subdetails_indent"
        android:layout_marginTop="@dimen/details_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rte_type_prompt"/>

    <TextView
        android:id="@+id/tv_terr_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/unspecified"
        android:textSize="@dimen/details_size"
        android:layout_marginStart="@dimen/details_indent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_terr_type_prompt"
...
        android:layout_marginStart="@dimen/subdetails_indent"
        android:layout_marginTop="@dimen/details_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_terr_type_prompt"/>

    <TextView
        android:id="@+id/tv_srfce_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/unspecified"
        android:textSize="@dimen/details_size"
        android:layout_marginStart="@dimen/details_indent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_srfce_type_prompt"
...
        android:layout_marginStart="@dimen/subdetails_indent"
        android:layout_marginTop="@dimen/details_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_srfce_type_prompt"/>

    <TextView
        android:id="@+id/tv_lnd_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/unspecified"
        android:textSize="@dimen/details_size"
        android:layout_marginStart="@dimen/details_indent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_lnd_type_prompt"
...
        android:layout_marginStart="@dimen/subdetails_indent"
        android:layout_marginTop="@dimen/details_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lnd_type_prompt"/>

    <TextView
        android:id="@+id/tv_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/unspecified"
        android:textSize="@dimen/details_size"
        android:layout_marginStart="@dimen/details_indent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_diff_prompt"
...
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/details_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_notes"
        app:layout_constraintTop_toTopOf="@id/btn_details_start_walk"/>

    <TextView
        android:id="@+id/tv_notes_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
